--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,7 +7,22 @@
     <title>Catacombs Admin</title>
   </head>
   <body>
+    <!-- Netlify Identity Widget (THIS is what processes invite/recovery tokens) -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
     <!-- Decap CMS -->
     <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", (user) => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
   </body>
 </html>
